--- a/main.html
+++ b/main.html
@@ -71,10 +71,12 @@
       </div>
     </div>
 
+    
 
 
 
 
+<!-- ---------------------------------------------DESTINATION SECTION----------------------------------------------- -->
 
 
 
@@ -285,7 +287,7 @@
 
 
 
-
+<!-- -----------------------------------------------GALLERY SECTION----------------------------------------------------- -->
 
 
 
@@ -304,16 +306,6 @@
     </div>
   </div>
 
-  <div class="slider-row">
-    <div class="slider-track">
-      <img src="assets/pexels-tanmoy-pal-3640736-29106676.jpg" alt="">
-      <img src="assets/About Images/Kudengrim-Living-Root-4-scaled.jpg" alt="">
-      <img src="assets/About Images/mawkyrwat-2-scaled.jpg" alt="">
-      <img src="assets/Gallery/activities.jpeg" alt="">
-      <img src="assets/Extra Images/Frame-46-600x352.webp" alt="">
-      <img src="assets/Destination Images/chandigre-rural-tourist-resort-4.jpg" alt="">
-    </div>
-  </div>
 
   <div class="slider-row">
     <div class="slider-track">
@@ -331,6 +323,14 @@
 
 
 
+<div class="postcard-image-div">
+   <img src="assets/Capture.PNG" alt="postcard" id="postcard-image">
+</div>
+
+
+
+
+<!-- -------------------------------------------CONTACT SECTION------------------------------------------------------ -->
 
 
 
