--- a/main.html
+++ b/main.html
@@ -82,6 +82,7 @@
 
     <section id="destinations" class="destinations-section">
   <h2>Amazing Places to Visit</h2>
+  <p>Explore the enchanting trails, divine forests and mesmerizing falls of this mysterious land.</p>
   <div class="places-row1">
     
     <div class="place-card">
@@ -343,8 +344,8 @@
     <form id="contact-form" class="contact-form">
       <input type="text" id="name" placeholder="Your Name" required />
       <input type="email" id="email" placeholder="Your Email" required />
-      <textarea id="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
+      <textarea id="message" rows="5" placeholder="Type Your Message Here...." required></textarea>
+      <button type="submit" id="submitBtn">Submit</button>
     </form>
 
     <!-- Contact Info -->
@@ -371,6 +372,6 @@
 
     <script src="JS/script.js"></script>
     <script src="JS/slider.js"></script>
-    <script src="JS/adventure.js"></script>
+    <script src="JS/gallery.js"></script>
   </body>
 </html>
