--- a/main.html
+++ b/main.html
@@ -297,13 +297,13 @@
 
   <div class="slider-row">
     <div class="slider-track">
-      <img src="https://source.unsplash.com/random/300x200?nature,water" alt="">
-      <img src="https://source.unsplash.com/random/301x200?mountain" alt="">
-      <img src="https://source.unsplash.com/random/302x200?forest" alt="">
-      <img src="https://source.unsplash.com/random/303x200?lake" alt="">
-      <img src="https://source.unsplash.com/random/304x200?sky" alt="">
-      <img src="https://source.unsplash.com/random/305x200?river" alt="">
-      <img src="https://source.unsplash.com/random/300x200?nature,water" alt="">
+      <img src="assets/Gallery/Kudengrim-Living-Root-4-scaled.jpg" alt="">
+      <img src="assets/Gallery/Memo-Lake.webp" alt="">
+      <img src="assets/Extra Images/Frame-46-600x352.webp" alt="">
+      <img src="assets/Gallery/Mawlynnong-Church.jpg" alt="">
+      <img src="assets/Destination Images/Destinations-Khasi-Hills-Lum-Sohpetbneng-scaled.jpg" alt="">
+      <img src="assets/Gallery/mawkyrwat-2-scaled.jpg" alt="">
+      <img src="assets/Destination Images/destinations.jpg" alt="">
     </div>
   </div>
 
