--- a/main.html
+++ b/main.html
@@ -297,25 +297,26 @@
 
   <div class="slider-row">
     <div class="slider-track">
-      <img src="assets/Gallery/Kudengrim-Living-Root-4-scaled.jpg" alt="">
-      <img src="assets/Gallery/Memo-Lake.webp" alt="">
-      <img src="assets/Extra Images/Frame-46-600x352.webp" alt="">
-      <img src="assets/Gallery/Mawlynnong-Church.jpg" alt="">
-      <img src="assets/Destination Images/Destinations-Khasi-Hills-Lum-Sohpetbneng-scaled.jpg" alt="">
-      <img src="assets/Gallery/mawkyrwat-2-scaled.jpg" alt="">
-      <img src="assets/Destination Images/destinations.jpg" alt="">
+      <img src="assets/Gallery/Kudengrim-Living-Root-4-scaled.jpg" alt="" class="img1">
+      <img src="assets/Gallery/Memo-Lake.webp" alt="" class="img1">
+      <img src="assets/Gallery/activities.jpeg" alt="" class="img2">
+      <img src="assets/Gallery/Mawlynnong-Church.jpg" alt="" class="img1">
+      <img src="assets/Destination Images/Destinations-Khasi-Hills-Lum-Sohpetbneng-scaled.jpg" alt="" class="img1">
+      <img src="assets/Gallery/mawkyrwat-2-scaled.jpg" alt="" class="img1">
+      <img src="assets/Destination Images/destinations.jpg" alt="" class="img2">
     </div>
   </div>
 
 
   <div class="slider-row">
     <div class="slider-track">
-      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="">
-      <img src="https://source.unsplash.com/random/312x200?valley" alt="">
-      <img src="https://source.unsplash.com/random/313x200?rocks" alt="">
-      <img src="https://source.unsplash.com/random/314x200?travel" alt="">
-      <img src="https://source.unsplash.com/random/315x200?bridge" alt="">
-      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="">
+      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="" class="img2">
+      <img src="https://source.unsplash.com/random/312x200?valley" alt="" class="1">
+      <img src="https://source.unsplash.com/random/313x200?rocks" alt="" class="img1">
+      <img src="https://source.unsplash.com/random/314x200?travel" alt="" class="img2">
+      <img src="https://source.unsplash.com/random/315x200?bridge" alt="" class="img1">
+      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="" class="img1">
+      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="" class="img2">
     </div>
   </div>
 </section>
