Gallery section updated

--- a/main.html
+++ b/main.html
@@ -293,30 +293,32 @@
 
 
 <section id="gallery" class="gallery-section">
-  <h2>Collections</h2>
+  <h2>[ Snapshots ]</h2>
+  <p>"Nature, culture, and stories through the lens."</p>
 
   <div class="slider-row">
     <div class="slider-track">
-      <img src="assets/Gallery/Kudengrim-Living-Root-4-scaled.jpg" alt="" class="img1">
-      <img src="assets/Gallery/Memo-Lake.webp" alt="" class="img1">
-      <img src="assets/Gallery/activities.jpeg" alt="" class="img2">
-      <img src="assets/Gallery/Mawlynnong-Church.jpg" alt="" class="img1">
-      <img src="assets/Destination Images/Destinations-Khasi-Hills-Lum-Sohpetbneng-scaled.jpg" alt="" class="img1">
-      <img src="assets/Gallery/mawkyrwat-2-scaled.jpg" alt="" class="img1">
-      <img src="assets/Destination Images/destinations.jpg" alt="" class="img2">
+      <img src="assets/Gallery/gallery1.jpg" alt="" class="img1">
+      <img src="assets/Gallery/vertical1.jpeg" alt="" class="img2">
+      <img src="assets/Gallery/gallery2.jpg" alt="" class="img1">
+      <img src="assets/Gallery/vertical6.jpeg" alt="" class="img2">
+      <img src="assets/Gallery/gallery3.webp" alt="" class="img1">
+      <img src="assets/Gallery/vertical2.jpg" alt="" class="img2">
+      <img src="assets/Gallery/gallery4.jpg" alt="" class="img1">
+      <img src="assets/Gallery/vertical3.jpeg" alt="" class="img2">
     </div>
   </div>
 
 
   <div class="slider-row">
     <div class="slider-track">
-      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="" class="img2">
-      <img src="https://source.unsplash.com/random/312x200?valley" alt="" class="1">
-      <img src="https://source.unsplash.com/random/313x200?rocks" alt="" class="img1">
-      <img src="https://source.unsplash.com/random/314x200?travel" alt="" class="img2">
-      <img src="https://source.unsplash.com/random/315x200?bridge" alt="" class="img1">
-      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="" class="img1">
-      <img src="https://source.unsplash.com/random/311x200?rainforest" alt="" class="img2">
+      <img src="assets/Gallery/vertical5.jpeg" alt="" class="img2">
+      <img src="assets/Gallery/gallery5.jpg" alt="" class="img1">
+      <img src="assets/Gallery/vertical4.jpeg" alt="" class="img2">
+      <img src="assets/Gallery/gallery8.jpeg" alt="" class="img1">
+      <img src="assets/Gallery/gallery7.jpg" alt="" class="img1">
+      <img src="assets/Gallery/gallery6.jpeg" alt="" class="img1">
+      <img src="assets/Gallery/vertical8.jpeg" alt="" class="img2">
     </div>
   </div>
 </section>
