--- a/main.html
+++ b/main.html
@@ -17,23 +17,26 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <div class="logo-div">
-          <img src="assets/Logo.png" class="logo-image" />
-        </div>
+<header>
+  <nav>
+    <div class="logo-div">
+      <img src="assets/Logo.png" class="logo-image" />
+    </div>
 
-        <div class="nav-div">
-          <ul>
-            <li><a href="#home">HOME</a></li>
-            <li><a href="#destinations">DESTINATIONS</a></li>
-            <li><a href="#experiences">TOURS & PACKAGES</a></li>
-            <li><a href="#gallery">GALLERY</a></li>
-            <li><a href="#contact">CONTACT US</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div> 
+
+    <div class="nav-div" id="nav-links">
+      <ul>
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#destinations">DESTINATIONS</a></li>
+        <li><a href="#experiences">TOURS & PACKAGES</a></li>
+        <li><a href="#gallery">GALLERY</a></li>
+        <li><a href="#contact">CONTACT US</a></li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
 
     <div class="slider">
       <div class="hero">
@@ -381,5 +384,6 @@
     <script src="JS/script.js"></script>
     <script src="JS/slider.js"></script>
     <script src="JS/gallery.js"></script>
+    <script src="JS/footer.js"></script>
   </body>
 </html>
