Added Responsive Design

--- a/main.html
+++ b/main.html
@@ -83,99 +83,92 @@
 
 
 
-    <section id="destinations" class="destinations-section">
+   <section id="destinations" class="destinations-section">
   <h2>Amazing Places to Visit</h2>
   <p>Explore the enchanting trails, divine forests and mesmerizing falls of this mysterious land.</p>
-<div class="places-row1">
-  <div class="place-card">
-    <img src="assets/Destination Images/1.jpg" alt="Nohkalikai Falls">
-    <div class="label">Shillong</div>
-    <div class="overlay">
-      <h3>Nohkalikai Falls</h3>
-      <p>One of India's tallest waterfalls, plunging over 1,100 ft into a lush gorge.</p>
+
+  <div class="places-wrapper">
+    <div class="place-card">
+      <img src="assets/Destination Images/1.jpg" alt="Nohkalikai Falls">
+      <div class="label">Shillong</div>
+      <div class="overlay">
+        <h3>Nohkalikai Falls</h3>
+        <p>One of India's tallest waterfalls, plunging over 1,100 ft into a lush gorge.</p>
+      </div>
+    </div>
+
+    <div class="place-card">
+      <img src="assets/Destination Images/5.jpg" alt="Living Root Bridge">
+      <div class="label">Cherrapunji</div>
+      <div class="overlay">
+        <h3>Living Root Bridge</h3>
+        <p>Natural marvel grown over centuries—walk across forests and flowing streams.</p>
+      </div>
+    </div>
+
+    <div class="place-card">
+      <img src="assets/Destination Images/3.jpg" alt="Umiam Lake">
+      <div class="label">Shillong</div>
+      <div class="overlay">
+        <h3>Umiam Lake</h3>
+        <p>Serene reservoir surrounded by hills, ideal for boating and watersports.</p>
+      </div>
+    </div>
+
+    <div class="place-card">
+      <img src="assets/Destination Images/4.jpg" alt="Nohkalikai Falls">
+      <div class="label">Cherrapunji</div>
+      <div class="overlay">
+        <h3>Nohkalikai Falls</h3>
+        <p>One of India's tallest waterfalls, plunging over 1,100 ft into a lush gorge.</p>
+      </div>
+    </div>
+
+    <div class="place-card">
+      <img src="assets/Destination Images/2.jpg" alt="Living Root Bridge">
+      <div class="label">Mawlynnong</div>
+      <div class="overlay">
+        <h3>Living Root Bridge</h3>
+        <p>Natural marvel grown over centuries—walk across forests and flowing streams.</p>
+      </div>
+    </div>
+
+    <div class="place-card">
+      <img src="assets/Destination Images/6.jpg" alt="Umiam Lake">
+      <div class="label">Shillong</div>
+      <div class="overlay">
+        <h3>Umiam Lake</h3>
+        <p>Serene reservoir surrounded by hills, ideal for boating and watersports.</p>
+      </div>
+    </div>
+
+    <div class="place-card">
+      <img src="assets/Destination Images/7.jpg" alt="Nohkalikai Falls">
+      <div class="label">Cherrapunji</div>
+      <div class="overlay">
+        <h3>Nohkalikai Falls</h3>
+        <p>One of India's tallest waterfalls, plunging over 1,100 ft into a lush gorge.</p>
+      </div>
+    </div>
+
+    <div class="place-card">
+      <img src="assets/Destination Images/8.jpeg" alt="Living Root Bridge">
+      <div class="label">Mawlynnong</div>
+      <div class="overlay">
+        <h3>Living Root Bridge</h3>
+        <p>Natural marvel grown over centuries—walk across forests and flowing streams.</p>
+      </div>
+    </div>
+
+    <div class="place-card">
+      <img src="assets/Destination Images/9.jpg" alt="Umiam Lake">
+      <div class="label">Shillong</div>
+      <div class="overlay">
+        <h3>Umiam Lake</h3>
+        <p>Serene reservoir surrounded by hills, ideal for boating and watersports.</p>
+      </div>
     </div>
   </div>
-
-  <div class="place-card">
-    <img src="assets/Destination Images/5.jpg" alt="Living Root Bridge">
-    <div class="label">Cherrapunji</div>
-    <div class="overlay">
-      <h3>Living Root Bridge</h3>
-      <p>Natural marvel grown over centuries—walk across forests and flowing streams.</p>
-    </div>
-  </div>
-
-  <div class="place-card">
-    <img src="assets/Destination Images/3.jpg" alt="Umiam Lake">
-    <div class="label">Shillong</div>
-    <div class="overlay">
-      <h3>Umiam Lake</h3>
-      <p>Serene reservoir surrounded by hills, ideal for boating and watersports.</p>
-    </div>
-  </div>
-</div>
-
-<div class="places-row2">
-  <div class="place-card">
-    <img src="assets/Destination Images/4.jpg" alt="Nohkalikai Falls">
-    <div class="label">Cherrapunji</div>
-    <div class="overlay">
-      <h3>Nohkalikai Falls</h3>
-      <p>One of India's tallest waterfalls, plunging over 1,100 ft into a lush gorge.</p>
-    </div>
-  </div>
-
-  <div class="place-card">
-    <img src="assets/Destination Images/2.jpg" alt="Living Root Bridge">
-    <div class="label">Mawlynnong</div>
-    <div class="overlay">
-      <h3>Living Root Bridge</h3>
-      <p>Natural marvel grown over centuries—walk across forests and flowing streams.</p>
-    </div>
-  </div>
-
-  <div class="place-card">
-    <img src="assets/Destination Images/6.jpg" alt="Umiam Lake">
-    <div class="label">Shillong</div>
-    <div class="overlay">
-      <h3>Umiam Lake</h3>
-      <p>Serene reservoir surrounded by hills, ideal for boating and watersports.</p>
-    </div>
-  </div>
-</div>
-
-<div class="places-row3">
-  <div class="place-card">
-    <img src="assets/Destination Images/7.jpg" alt="Nohkalikai Falls">
-    <div class="label">Cherrapunji</div>
-    <div class="overlay">
-      <h3>Nohkalikai Falls</h3>
-      <p>One of India's tallest waterfalls, plunging over 1,100 ft into a lush gorge.</p>
-    </div>
-  </div>
-
-  <div class="place-card">
-    <img src="assets/Destination Images/8.jpeg" alt="Living Root Bridge">
-    <div class="label">Mawlynnong</div>
-    <div class="overlay">
-      <h3>Living Root Bridge</h3>
-      <p>Natural marvel grown over centuries—walk across forests and flowing streams.</p>
-    </div>
-  </div>
-
-  <div class="place-card">
-    <img src="assets/Destination Images/9.jpg" alt="Umiam Lake">
-    <div class="label">Shillong</div>
-    <div class="overlay">
-      <h3>Umiam Lake</h3>
-      <p>Serene reservoir surrounded by hills, ideal for boating and watersports.</p>
-    </div>
-  </div>
-</div>
-
-
-
- 
 </section>
 
 
